[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Unit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Styles/Panel.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Font/Terminus.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=5]

[node name="UI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Board" type="VBoxContainer" parent="."]
margin_right = 1004.0
margin_bottom = 580.0
script = ExtResource( 1 )

[node name="Profiles" type="HBoxContainer" parent="Board"]
margin_right = 1004.0
margin_bottom = 246.0
size_flags_horizontal = 3

[node name="Player" parent="Board/Profiles" groups=[
"Persistent",
] instance=ExtResource( 2 )]
margin_bottom = 246.0

[node name="Debug" type="PanelContainer" parent="Board"]
margin_top = 250.0
margin_right = 240.0
margin_bottom = 289.0
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 3 )

[node name="Container" type="HBoxContainer" parent="Board/Debug"]
margin_left = 6.0
margin_top = 6.0
margin_right = 234.0
margin_bottom = 33.0

[node name="Debug_Label" type="Label" parent="Board/Debug/Container"]
margin_top = 6.0
margin_right = 48.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "DEBUG "

[node name="State_Label" type="Label" parent="Board/Debug/Container"]
margin_left = 52.0
margin_top = 6.0
margin_right = 116.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "X: State"

[node name="VSeparator" type="VSeparator" parent="Board/Debug/Container"]
margin_left = 120.0
margin_right = 124.0
margin_bottom = 27.0

[node name="Button" type="Button" parent="Board/Debug/Container"]
margin_left = 128.0
margin_right = 228.0
margin_bottom = 27.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "Start Fight"

[node name="Notices" type="VBoxContainer" parent="Board"]
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 365.0
size_flags_vertical = 3
alignment = 2

[node name="Actions" type="HBoxContainer" parent="Board"]
margin_top = 369.0
margin_right = 1004.0
margin_bottom = 396.0

[node name="End_Turn" type="Button" parent="Board/Actions"]
margin_right = 120.0
margin_bottom = 27.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "End Turn"

[node name="Hand" type="HBoxContainer" parent="Board"]
margin_top = 400.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Deck" parent="Board/Hand" instance=ExtResource( 5 )]
[connection signal="name_changed" from="Board" to="Board/Profiles/Player" method="_on_Board_name_changed"]
[connection signal="no_rolls_left" from="Board/Profiles/Player" to="Board" method="_on_Player_no_rolls_left"]
[connection signal="pressed" from="Board/Debug/Container/Button" to="Board" method="_on_Button_pressed"]
[connection signal="pressed" from="Board/Actions/End_Turn" to="Board" method="_on_End_Turn_pressed"]
[connection signal="pressed" from="Board/Hand/Deck" to="Board" method="_on_Deck_pressed"]
